[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Wood and Paper UI/Prefabs/6.png" type="Texture" id=1]
[ext_resource path="res://Level/TombolPopUp.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Folks-Normal.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/senjata adat no bg/badik_Gorontalo-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://assets/senjata adat no bg/badik__sulawesi_selatan_-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/1.png" type="Texture" id=6]
[ext_resource path="res://assets/senjata adat no bg/panah__papua_barat_-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://assets/senjata adat no bg/salawaku__maluku_-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://assets/senjata adat no bg/keris__sulawesi_tenggara_-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://assets/senjata adat no bg/bara-sangihe-7__sulawesi_utara_-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://assets/senjata adat no bg/tombak__sulawesi_barat_-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://assets/senjata adat no bg/pasatimpo__sulawesi_tengah_-removebg-preview.png" type="Texture" id=12]
[ext_resource path="res://assets/senjata adat no bg/belati__papua_-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://assets/Wood and Paper UI/Sliders/1.png" type="Texture" id=14]
[ext_resource path="res://Level/Senjata3.gd" type="Script" id=15]
[ext_resource path="res://Level/VBoxSenjata3.gd" type="Script" id=16]
[ext_resource path="res://assets/Pirate Treasure/Gold Coin/Screenshot_2024-05-29_143156-rem.png" type="Texture" id=17]
[ext_resource path="res://Level/png-transparent-padlock-drawing-coloring-book-padlock-rectangle-technic-brand-removebg-preview.png" type="Texture" id=18]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/13.png" type="Texture" id=19]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/1.png" type="Texture" id=20]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 10, 11, 108, 106 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 3 )

[node name="Senjata3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxSenjata3" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_right = 26.0
script = ExtResource( 16 )

[node name="HBoxContainerAchievement" type="HBoxContainer" parent="Panel/VBoxSenjata3"]
margin_right = 366.0
margin_bottom = 70.0

[node name="Button" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="Bara-sangihe-7SulawesiUtara-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button"]
position = Vector2( 34, 37 )
scale = Vector2( 0.0787197, 0.11169 )
texture = ExtResource( 10 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button2" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="TombakSulawesiBarat-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button2"]
position = Vector2( 35.5, 33.8125 )
scale = Vector2( 0.156, 0.25266 )
texture = ExtResource( 11 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button2"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button2"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button3" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="PasatimpoSulawesiTengah-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button3"]
position = Vector2( 36, 34 )
scale = Vector2( 0.193966, 0.155121 )
texture = ExtResource( 12 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button3"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button3"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button4" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="KerisSulawesiTenggara-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button4"]
position = Vector2( 33.75, 33 )
scale = Vector2( 0.0759804, 0.102941 )
texture = ExtResource( 9 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button4"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement/Button4"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="HBoxContainerAchievement2" type="HBoxContainer" parent="Panel/VBoxSenjata3"]
margin_top = 74.0
margin_right = 366.0
margin_bottom = 144.0

[node name="Button5" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="BadikSulawesiSelatan-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button5"]
position = Vector2( 35, 35 )
scale = Vector2( 0.0643254, 0.0727666 )
texture = ExtResource( 5 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button5"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button5"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button6" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="BadikGorontalo-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button6"]
position = Vector2( 35, 36 )
scale = Vector2( 0.0651409, 0.0858262 )
texture = ExtResource( 4 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button6"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button6"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button7" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2"]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="SalawakuMaluku-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button7"]
position = Vector2( 36, 36 )
scale = Vector2( 0.160285, 0.126333 )
texture = ExtResource( 8 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button7"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button7"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button8" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2"]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="SalawakuMaluku-removebg-preview2" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button8"]
position = Vector2( 38, 36 )
scale = Vector2( 0.160285, 0.126333 )
texture = ExtResource( 8 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button8"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button8"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="HBoxContainerAchievement3" type="HBoxContainer" parent="Panel/VBoxSenjata3"]
margin_top = 148.0
margin_right = 366.0
margin_bottom = 218.0

[node name="Button9" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3"]
margin_right = 70.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="PanahPapuaBarat-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button9"]
position = Vector2( 34, 34 )
scale = Vector2( 0.125694, 0.133333 )
texture = ExtResource( 7 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button9"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button9"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button10" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 6 )

[node name="BelatiPapua-removebg-preview" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button10"]
position = Vector2( 35, 34 )
scale = Vector2( 0.0676357, 0.0875323 )
texture = ExtResource( 13 )

[node name="kunci" type="Sprite" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button10"]
position = Vector2( 33.9999, 34 )
scale = Vector2( 0.096, 0.088 )
texture = ExtResource( 18 )

[node name="beli" type="Button" parent="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button10"]
margin_left = 12.0
margin_top = 51.0
margin_right = 58.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "50"
icon = ExtResource( 17 )
align = 0

[node name="Button" type="Button" parent="."]
margin_left = 301.0
margin_top = 172.0
margin_right = 325.0
margin_bottom = 192.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 14 )

[node name="Button2" type="Button" parent="."]
margin_left = 271.0
margin_top = 200.0
margin_right = 328.0
margin_bottom = 225.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Kembali"

[node name="CoinBar" type="Control" parent="."]
margin_left = 284.0
margin_top = -4.0
margin_right = 349.0
margin_bottom = 25.0
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CoinBar"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CoinBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 20 )

[node name="TextureRect2" type="TextureRect" parent="CoinBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 19 )

[node name="TextureRect" type="TextureRect" parent="CoinBar"]
margin_left = 19.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 23.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="CoinBar"]
margin_left = 37.0
margin_top = 10.0
margin_right = 64.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"

[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement/Button" to="Panel/VBoxSenjata3" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement/Button2" to="Panel/VBoxSenjata3" method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement/Button3" to="Panel/VBoxSenjata3" method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement/Button4" to="Panel/VBoxSenjata3" method="_on_Button4_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button5" to="Panel/VBoxSenjata3" method="_on_Button5_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button6" to="Panel/VBoxSenjata3" method="_on_Button6_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button7" to="Panel/VBoxSenjata3" method="_on_Button7_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement2/Button8" to="Panel/VBoxSenjata3" method="_on_Button8_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button9" to="Panel/VBoxSenjata3" method="_on_Button9_pressed"]
[connection signal="pressed" from="Panel/VBoxSenjata3/HBoxContainerAchievement3/Button10" to="Panel/VBoxSenjata3" method="_on_Button10_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
