extends VBoxContainer



func _on_Button_pressed():
	get_tree().change_scene("res://Senjata/Info/BaraSangiheInfo.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://Senjata/Info/TombakInfo.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://Senjata/Info/PasatimpoInfo.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://Senjata/Info/KerisSulawesiTenggara.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://Senjata/Info/BadikSulselInfo.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Senjata/Info/BadikGorontaloInfo.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Senjata/Info/SalawakuInfo.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Senjata/Info/ParangSalawakuInfo.tscn")


func _on_Button9_pressed():
	get_tree().change_scene("res://Senjata/Info/PanahInfo.tscn")


func _on_Button10_pressed():
	get_tree().change_scene("res://Senjata/Info/BelatiPapuaInfo.tscn")
